--- a/day2/classcomponent1/src/App.css
+++ b/day2/classcomponent1/src/App.css
@@ -1,6 +1,6 @@
 #main{
   width: 100%;
-  height: 100vh;
+  height: auto;
   /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
@@ -41,4 +41,21 @@ button{
 button i{
   font-size: 50px;
   font-weight: bold;
+}
+
+#write{
+  width: 100%;
+  height: 500px;
+  /* border: 1px solid black; */
+  display: flex;
+  align-items: center;
+}
+#write div{
+  width: 50%;
+  height: 100%;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
