--- a/navbar_with_routing/src/Components/Header.modules.css
+++ b/navbar_with_routing/src/Components/Header.modules.css
@@ -8,6 +8,7 @@
     font-weight: bold;
     font-style: italic;
     font-variant: small-caps;
-    background-color: pink;
+    /* background-color: pink; */
+    background-color: rgb(71, 95, 218);
     color: white;
 }
