--- a/single_movie_with_redux_project/src/Components/Header.modules.css
+++ b/single_movie_with_redux_project/src/Components/Header.modules.css
@@ -11,11 +11,11 @@
     overflow-y: scroll;
 }
 header {
-    background: url("https://s3picturehouses.s3.eu-central-1.amazonaws.com/header/ph_15977496885f3bb9b84457c.jpg");
+    /* background: url("https://s3picturehouses.s3.eu-central-1.amazonaws.com/header/ph_15977496885f3bb9b84457c.jpg"); */
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 550px;
+    height: 50px;
     position: relative;
     padding-top: 80px;
   }
